force-app/main/default/objects/Contact/fields/Business_Unit_Description__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Description__c</fullName>
    <formula>User__r.BusinessUnitDescription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit Description</label>
    <type>Text</type>
</CustomField>