force-app/main/default/objects/Contact/fields/Business_Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_ID__c</fullName>
    <formula>User__r.BusinessUnitID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit ID</label>
    <type>Text</type>
</CustomField>