force-app/main/default/objects/Contact/fields/CBA__c.field-meta.xml
<CustomField>
    <fullName>CBA__c</fullName>
    <formula>CASE( RIGHT(User__r.UnionID__c,3), &#39;3DM&#39;, User__r.UnionDescription__c &amp; &#39;-3DM&#39;,
             &#39;3DU&#39;, User__r.UnionDescription__c &amp; &#39;- 3DU&#39;,
             &#39;3DN&#39;, User__r.UnionDescription__c &amp; &#39;- 3DN&#39;,
             &#39;3DV&#39;, User__r.UnionDescription__c &amp; &#39;- 3DV&#39;,
         IF ( User__r.UnionDescription__c = &#39;Non Union&#39;, &#39;&#39;, User__r.UnionDescription__c)
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CBA</label>
    <type>Text</type>
</CustomField>