force-app/main/default/objects/Contact/fields/Check_Routing_Description__c.field-meta.xml
<CustomField>
    <fullName>Check_Routing_Description__c</fullName>
    <formula>User__r.CheckRoutingDescription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Routing Description</label>
    <type>Text</type>
</CustomField>