force-app/main/default/objects/Contact/fields/Check_Routing_ID__c.field-meta.xml
<CustomField>
    <fullName>Check_Routing_ID__c</fullName>
    <formula>User__r.CheckRoutingID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Routing ID</label>
    <type>Text</type>
</CustomField>