force-app/main/default/objects/Contact/fields/CurrentRate__c.field-meta.xml
<CustomField>
    <fullName>CurrentRate__c</fullName>
    <formula>User__r.CurrentRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Rate</label>
    <type>Text</type>
</CustomField>