force-app/main/default/objects/Contact/fields/CurrentStep__c.field-meta.xml
<CustomField>
    <fullName>CurrentStep__c</fullName>
    <formula>User__r.CurrentStep__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Step</label>
    <type>Text</type>
</CustomField>