force-app/main/default/objects/Contact/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <formula>User__r.DateOfBirth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>