force-app/main/default/objects/Contact/fields/Date_Pay_Starts__c.field-meta.xml
<CustomField>
    <fullName>Date_Pay_Starts__c</fullName>
    <formula>User__r.DatePayStarts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Position Date</label>
    <type>Date</type>
</CustomField>