force-app/main/default/objects/Contact/fields/DaysSinceHireDate__c.field-meta.xml
<CustomField>
    <fullName>DaysSinceHireDate__c</fullName>
    <formula>Today() -  Original_Hire_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DaysSinceHireDate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>