force-app/main/default/objects/Contact/fields/Employee_ID_Text__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID_Text__c</fullName>
    <description>Employee Id for to use when mapping to Schedule Once</description>
    <label>Employee ID Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>