force-app/main/default/objects/Contact/fields/Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number__c</fullName>
    <formula>$User.EmployeeID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Number</label>
    <type>Text</type>
</CustomField>