force-app/main/default/objects/Contact/fields/Employee_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Employee_Status_Description__c</fullName>
    <formula>User__r.EmployeeStatusDescription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Status Description</label>
    <type>Text</type>
</CustomField>