force-app/main/default/objects/Contact/fields/Employee_Status_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_Status_ID__c</fullName>
    <formula>User__r.EmployeeStatusID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Status ID</label>
    <type>Text</type>
</CustomField>