force-app/main/default/objects/Contact/fields/Facility_Description__c.field-meta.xml
<CustomField>
    <fullName>Facility_Description__c</fullName>
    <label>Facility Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>