force-app/main/default/objects/Contact/fields/Facility_ID__c.field-meta.xml
<CustomField>
    <fullName>Facility_ID__c</fullName>
    <formula>User__r.FacilityID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility ID</label>
    <type>Text</type>
</CustomField>