force-app/main/default/objects/Contact/fields/Full_Time_Part_Time_Description__c.field-meta.xml
<CustomField>
    <fullName>Full_Time_Part_Time_Description__c</fullName>
    <formula>User__r.Full_Time_Part_Time_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full-Time/Part-Time Description</label>
    <type>Text</type>
</CustomField>