force-app/main/default/objects/Contact/fields/HourlyRate__c.field-meta.xml
<CustomField>
    <fullName>HourlyRate__c</fullName>
    <formula>User__r.HourlyRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hourly Rate</label>
    <type>Text</type>
</CustomField>