force-app/main/default/objects/Contact/fields/Is_Union__c.field-meta.xml
<CustomField>
    <fullName>Is_Union__c</fullName>
    <formula>User__r.Is_Union__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Union</label>
    <type>Checkbox</type>
</CustomField>