force-app/main/default/objects/Contact/fields/Job_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Code_Description__c</fullName>
    <label>Job Code Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>