force-app/main/default/objects/Contact/fields/Job_Code_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_Code_ID__c</fullName>
    <formula>User__r.JobCodeID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Code ID</label>
    <type>Text</type>
</CustomField>