force-app/main/default/objects/Contact/fields/Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Date__c</fullName>
    <formula>User__r.LastUpdatedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Updated Date</label>
    <type>Date</type>
</CustomField>