force-app/main/default/objects/Contact/fields/Leave_Of_Absence_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Leave_Of_Absence_End_Date__c</fullName>
    <formula>User__r.LeaveOfAbsenceEndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Of Absence End Date</label>
    <type>Date</type>
</CustomField>