force-app/main/default/objects/Contact/fields/Leave_of_Absence_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Leave_of_Absence_Start_Date__c</fullName>
    <formula>User__r.LeaveofAbsenceStartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave of Absence Start Date</label>
    <type>Date</type>
</CustomField>