force-app/main/default/objects/Contact/fields/Next_Non_Union_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Next_Non_Union_Supervisor__c</fullName>
    <formula>User__r.Next_Non_Union_Supervisor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Non-Union Supervisor</label>
    <type>Text</type>
</CustomField>