force-app/main/default/objects/Contact/fields/OriginalHireDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalHireDate__c</fullName>
    <formula>User__r.OriginalHireDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Hire Date</label>
    <type>Date</type>
</CustomField>