force-app/main/default/objects/Contact/fields/Pay_Grade_ID__c.field-meta.xml
<CustomField>
    <fullName>Pay_Grade_ID__c</fullName>
    <formula>User__r.PayGradeID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay Grade ID</label>
    <type>Text</type>
</CustomField>