force-app/main/default/objects/Contact/fields/PID__c.field-meta.xml
<CustomField>
    <fullName>PID__c</fullName>
    <formula>User__r.PID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PID</label>
    <type>Text</type>
</CustomField>