force-app/main/default/objects/Contact/fields/RaceCodeDescription__c.field-meta.xml
<CustomField>
    <fullName>RaceCodeDescription__c</fullName>
    <formula>User__r.RaceCodeDescription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Race Code Description</label>
    <type>Text</type>
</CustomField>