force-app/main/default/objects/Contact/fields/RaceCodeID__c.field-meta.xml
<CustomField>
    <fullName>RaceCodeID__c</fullName>
    <formula>User__r.RaceCodeID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Race Code ID</label>
    <type>Text</type>
</CustomField>