force-app/main/default/objects/Contact/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <formula>CASESAFEID(User__r.Supervisor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor</label>
    <type>Text</type>
</CustomField>