force-app/main/default/objects/Contact/fields/Supervisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Email__c</fullName>
    <formula>User__r.Supervisor_Email__c</formula>
    <label>Supervisor Email</label>
    <type>Text</type>
</CustomField>