force-app/main/default/objects/Contact/fields/Supervisor_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Employee_ID__c</fullName>
    <formula>User__r.SupervisorEmployeeID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor Employee ID</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>