force-app/main/default/objects/Contact/fields/Supervisor_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_First_Name__c</fullName>
    <formula>User__r.SupervisorFirstName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor First Name</label>
    <type>Text</type>
</CustomField>