force-app/main/default/objects/Contact/fields/Supervisor_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Full_Name__c</fullName>
    <label>Supervisor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>