force-app/main/default/objects/Contact/fields/Supervisor_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Last_Name__c</fullName>
    <formula>User__r.SupervisorLastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor Last Name</label>
    <type>Text</type>
</CustomField>