force-app/main/default/objects/Contact/fields/Termination_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Termination_Code_Description__c</fullName>
    <formula>User__r.TerminationCodeDescription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Termination Code Description</label>
    <type>Text</type>
</CustomField>