force-app/main/default/objects/Contact/fields/Termination_Code_ID__c.field-meta.xml
<CustomField>
    <fullName>Termination_Code_ID__c</fullName>
    <formula>User__r.TerminationCodeID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Termination Code ID</label>
    <type>Text</type>
</CustomField>