force-app/main/default/objects/Contact/fields/Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <formula>User__r.TerminationDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>