force-app/main/default/objects/Contact/fields/TR_Employee_ID_Numeric__c.field-meta.xml
<CustomField>
    <fullName>TR_Employee_ID_Numeric__c</fullName>
    <formula>VALUE(  User__r.EmployeeID__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TR_Employee_ID_Numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>