force-app/main/default/objects/Contact/fields/Union_Description__c.field-meta.xml
<CustomField>
    <fullName>Union_Description__c</fullName>
    <formula>User__r.UnionDescription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Union Description</label>
    <type>Text</type>
</CustomField>