force-app/main/default/objects/Contact/fields/Union_ID__c.field-meta.xml
<CustomField>
    <fullName>Union_ID__c</fullName>
    <formula>User__r.UnionID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Union ID</label>
    <type>Text</type>
</CustomField>