force-app/main/default/objects/Contact/fields/YearsOfService__c.field-meta.xml
<CustomField>
    <fullName>YearsOfService__c</fullName>
    <formula>User__r.YearsOfService__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Years Of Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>