force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Business_Unit_ID__c</columns>
    <columns>Check_Routing_Description__c</columns>
    <columns>City__c</columns>
    <columns>Date_Of_Birth__c</columns>
    <columns>CONTACT.DEPARTMENT</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>